[#456] Support for static Predictors (#477)
* Support for multiple static Predictors

Predictor is a set of deployment parameters for different Inference Servers. Such as ODAHU ML Server or Nvidia Triton.

* Add new 'predictor' field to e2e test resources

* Fix unit tests
