# packages/operator/docs/swagger.json
@@ -3181,6 +3181,10 @@
                         "type": "string"
                     }
                 },
+                "predictor": {
+                    "description": "ID of Predictor to use",
+                    "type": "string"
+                },
                 "readinessProbeInitialDelay": {
                     "description": "Initial delay for readiness probe of model pod",
                     "type": "integer"
